--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(xxx) xxx-xxxx</a>
+									<a href="#">(226) xxx-xxxx</a>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
